# pore-c

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylama.ini  CHANGELOG.md  MANIFEST.in  Makefile  README.md  cli.html  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pylama.ini  pyproject.toml  pyrightconfig.json  quickstart.html  requirements.txt  schema.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yml  python-package-conda.yml
_modules/: index.html
_modules/pore_c/: catalogs.html  cli_utils.html  datasources.html  io.html  model.html  settings.html  utils.html
_modules/pore_c/analyses/: alignments.html  contacts.html  reads.html  reference.html
_sources/: cli.md.txt
_sources/api/: modules.rst.txt  pore_c.analyses.alignments.rst.txt  pore_c.analyses.contacts.rst.txt  pore_c.analyses.reads.rst.txt  pore_c.analyses.reference.rst.txt  pore_c.analyses.rst.txt  pore_c.catalogs.rst.txt  pore_c.cli.rst.txt  pore_c.cli_utils.rst.txt  pore_c.config.rst.txt  pore_c.datasources.rst.txt  pore_c.io.rst.txt  pore_c.model.rst.txt  pore_c.rst.txt  pore_c.settings.rst.txt  pore_c.utils.rst.txt
api/: modules.html  pore_c.analyses.alignments.html  pore_c.analyses.contacts.html  pore_c.analyses.html  pore_c.analyses.reads.html  pore_c.analyses.reference.html  pore_c.catalogs.html  pore_c.cli.html  pore_c.cli_utils.html  pore_c.config.html  pore_c.datasources.html  pore_c.html  pore_c.io.html  pore_c.model.html  pore_c.settings.html  pore_c.utils.html
conda.recipe/: meta.yaml
doc/helpers/: dump_schema.py  extract_cli.py
doc/source/: cli.rst  conf.py  data_model.json  index.rst  model.rst
docs/: cli.md  conf.py  index.md
docs/helpers/: dump_schema.py  extract_cli.py
docsrc/: index.md  schema.md  schemas.json
pore_c/: __init__.py  catalogs.py  cli.py  cli_utils.py  config.py  dask.py  datasources.py  io.py  model.py  settings.py  utils.py
pore_c/analyses/: alignments.py  contacts.py  matrix.py  pairs.py  reads.py  reference.py  variants.py
requirements/: conda-spec.txt  dev.txt  docs.txt  testing.txt
src/pore_c/: __init__.py  _version.py  align_table2Salsa.py  catalogs.py  cli.py  datasources.py  io.py  model.py  settings.py  utils.py
src/pore_c/analyses/: alignments.py  convert.py  matrix.py  pairs.py  reads.py  reference.py
src/pore_c/dashboard/: main.py
src/pore_c/tools/: analysis.py  cluster_reads.py  correction.py  generate_fragments.py  hic_split.py  map_to_bins.py  map_to_frags.py  poreC_flatten.py
tests/: conftest.py  test_alignments.py  test_cli.py  test_cluster_reads.py  test_dask.py  test_generate_fragments.py  test_map_to_frags.py  test_poreC_flatten.py  test_porec_flatten.py  test_reads.py  test_utils.py
tests/data/: .gitattributes  GM12878.phased.conf.vcf.gz.tbi  GM12878_NlaIII_reads.tsv  GRCh38.chromsizes  GRCh38.fasta  GRCh38.fasta.gz.fai  GRCh38.fasta.gz.gzi  NlaIII_GRCh38.contacts.parquet  NlaIII_GRCh38.haplotagged_aligns.txt  NlaIII_GRCh38.pore_c.parquet  NlaIII_GRCh38.vd.fragments.parquet  NlaIII_run01_GRCh38.align_table.parquet  NlaIII_run01_GRCh38.coord_sort.bam  NlaIII_run01_GRCh38.coord_sort.bam.bai  NlaIII_run01_GRCh38.haplotagged.bam  NlaIII_run01_GRCh38.read_sort.bam  NlaIII_run01_GRCh38.read_sort_reformatted.bam  reads.summary.csv  test_ns.sam
tests/data/NlaIII_GRCh38.concatemers.parquet/: _common_metadata  _metadata  part.0.parquet
tests/data/NlaIII_GRCh38.contacts.parquet/: _common_metadata  _metadata  part.0.parquet
tests/data/NlaIII_GRCh38.pore_c.parquet/: _common_metadata  _metadata  part.0.parquet
tests/data/NlaIII_GRCh38.vd.fragments.parquet/: _common_metadata  _metadata  part.0.parquet
tests/data/NlaIII_run01_GRCh38.align_table.parquet/: _common_metadata  _metadata  part.0.parquet
tests/end_to_end/: Snakefile  bam_to_bed.py  bedtools-2.27.1.yml  pysam.yml  samtools-1.9.yml
tools/: clusterReads.py  convertHicToSparseMatrix.py  findFrag.py  makeHiCRef.py  mapToFrags.py  scanPoreC.py
tools/conversion/: hicToHiCPro.py  hicToSparseBed.py  poreCflatten.py
tools/visualisation/: graphicalMap.py  poreC_map.py
