[build-system]
requires = [
    "setuptools >= 40.0.4",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.isort]
profile = "black"


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag_format = "$version"


