[build-system]
requires = [
    "setuptools >= 40.0.4",
    "wheel >= 0.29.0",
    "Cython", # pyrle
    "numpy >= 1.16.1", # pairtools
]
build-backend = 'setuptools.build_meta'

[tool.isort]
profile = "black"


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
tag_format = "$version"
version_files = [
 "pyproject.toml",
 "setup.cfg",
 "pore_c/__init__.py"
]
update_changelog_on_bump = true
changelog_start_rev = "0.4.0"



