[metadata]
name = pore_c
version = 0.4.0
description = Tools to process data from an ONT poreC run
long_description = file: README.md
author = ont-applications
license = MPL 2.0
classifiers =
  Intended Audience :: Developers,
  License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0),
  Operating System :: Unix,
  Operating System :: POSIX,
  Programming Language :: Python,
  Programming Language :: Python :: 3.7,
  Programming Language :: Python :: Implementation :: CPython,
  Topic :: Utilities


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires= >=3.7,<4.0
install_requires=
  biopython ==1.77
  click >=7.0.0,<8.0
  cooler ==0.8.*,>=0.8.5
	dask >=2,<2022
	distributed ==2.*,>=2.9.3
  intake
  intake-parquet
  ncls
  networkx ==2.*,>=2.4.0
  numpy <1.20.0
  pandas >=1.0.5
	pairtools
  pyarrow ==1.*,>=1.0.0
  pydantic ==1.6.2
  pyranges ==0.0.71
  pysam
  streamz ==0.*,>=0.5.2
  tqdm

[options.entry_points]
console_scripts =
    pore_c = pore_c.cli:cli

[options.extras_require]
testing =
  pytest
  pytest-cov
	pytest-xdist
	pytest-watch
dev =
  autoflake
  better-exceptions
  black
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-comprehensions
  flake8-debugger
  isort
  mypy
  pdbpp
  pep8-naming
docs =
  sphinx
  sphinx-autobuild
	sphinx-book-theme
  sphinx-click
  sphinx-jsonschema
	myst-parser


[flake8]
exclude =
    .git
    __pycache__
    dist
    build

ignore =
  E501,E203,E231
max-line-length = 120
max-complexity = 9


[coverage:run]
relative_files = True
branch = True
include = pore_c/*
omit =
    tests/*

[coverage:report]
show_missing = True
fail_under = 0
exclude_lines =
  pragma: no cover

  # Don't complain about missing debug-only code:
  def __unicode__
  def __repr__
  def __str__

  # Don't complain if tests don't hit defensive assertion code:
  raise AssertionError
  raise NotImplementedError


[tool:pytest]
addopts =
  --durations=10
  --cov=pore_c
  --cov-report term
	--basetemp=tmp
norecursedirs = build dist tmp
testpaths =
  tests
rsyncignore = tmp dask_worker

[mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = 3.7
platform = Linux
ignore_missing_imports = True
